# fsi-api-implementation

./: .env  .env.sample  README.md  app.py  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
docker/: Dockerfile
models/: logistic_regression_hyper_tun.sav
models/ml/: classifier.py
models/schemas/: lr_clf.py
notebooks/: MRVCaseTecnico.ipynb
training/: data_processing.py  model_training.py
